--- a/web/index.html
+++ b/web/index.html
@@ -21,30 +21,48 @@
           <p class="tag">AI & plagiarism detection for academic writing</p>
         </div>
       </div>
-      <div class="uploader-card">
-        <form id="uploadForm" class="upload-form">
-          <label class="file-drop" id="dropZone">
-            <input type="file" id="fileInput" name="file" accept=".txt,.pdf,.png,.jpg,.jpeg" />
-            <div class="drop-content">
-              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 3v10" stroke="#2563EB" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M8 7l4-4 4 4" stroke="#2563EB" stroke-width="1.5" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <rect x="3" y="13" width="18" height="7" rx="2" stroke="#CBD5E1" stroke-width="1.2" />
-              </svg>
-              <div>
-                <div class="drop-title">Drag & drop a file, or click to browse</div>
-                <div class="drop-sub">Supported: .pdf, .txt, Images (png, jpg)</div>
+      <div class="uploader-card" id="tiltCard" data-tilt data-tilt-max="5" data-tilt-speed="400" data-tilt-glare
+        data-tilt-max-glare="0.2">
+        <div class="card-content">
+          <form id="uploadForm" class="upload-form">
+            <label class="file-drop" id="dropZone">
+              <input type="file" id="fileInput" name="file" accept=".txt,.pdf,.png,.jpg,.jpeg" />
+              <div class="drop-content">
+                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 3v10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M8 7l4-4 4 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <rect x="3" y="13" width="18" height="7" rx="2" stroke="currentColor" stroke-width="1.2" />
+                </svg>
+                <div>
+                  <div class="drop-title">Drag & drop a file, or click to browse</div>
+                  <div class="drop-sub">Supported: .pdf, .txt, Images (png, jpg)</div>
+                </div>
               </div>
+              <div id="scannerBeam" class="scanner-beam"></div>
+            </label>
+            <div class="actions">
+              <button id="analyzeBtn" class="btn primary" type="submit">Analyze</button>
+              <button id="clearBtn" class="btn" type="button">Clear</button>
             </div>
-          </label>
-          <div class="actions">
-            <button id="analyzeBtn" class="btn primary" type="submit">Analyze</button>
-            <button id="clearBtn" class="btn" type="button">Clear</button>
-          </div>
-        </form>
+          </form>
 
-        <div id="result" class="result" style="display:none"></div>
+          <div id="result" class="result" style="display:none">
+            <!-- Result content injected by JS -->
+          </div>
+          <div id="downloadAction" style="display:none; text-align:right; margin-top:12px;">
+            <button id="downloadBtn" class="btn secondary">
+              <svg style="vertical-align:middle;margin-right:6px" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2">
+                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                <polyline points="7 10 12 15 17 10" />
+                <line x1="12" y1="15" x2="12" y2="3" />
+              </svg>
+              Download Report
+            </button>
+          </div>
+        </div>
       </div>
 
       <div class="recent-scans-container" id="historyContainer" style="display:none">
