feat: Add initial web interface for file upload and scholarly paper detection.

--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
         <div class="card-content">
           <form id="uploadForm" class="upload-form">
             <label class="file-drop" id="dropZone">
-              <input type="file" id="fileInput" name="file" accept=".txt,.pdf,.png,.jpg,.jpeg" />
+              <input type="file" id="fileInput" name="file" accept=".txt,.pdf,.png,.jpg,.jpeg,.csv,.xlsx,.xls" />
               <div class="drop-content">
                 <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M12 3v10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -37,7 +37,7 @@
                 </svg>
                 <div>
                   <div class="drop-title">Drag & drop a file, or click to browse</div>
-                  <div class="drop-sub">Supported: .pdf, .txt, Images (png, jpg)</div>
+                  <div class="drop-sub">Supported: .pdf, .txt, Images, Excel/CSV</div>
                 </div>
               </div>
               <div id="scannerBeam" class="scanner-beam"></div>
