--- a/web/index.html
+++ b/web/index.html
@@ -12,67 +12,118 @@
 </head>
 
 <body>
-  <div class="hero">
-    <div class="hero-inner">
-      <div class="brand">
-        <div class="logo">SP</div>
-        <div class="title-area">
-          <h1>Scholarly Paper Detector</h1>
-          <p class="tag">AI & plagiarism detection for academic writing</p>
-        </div>
-      </div>
-      <div class="uploader-card" id="tiltCard" data-tilt data-tilt-max="5" data-tilt-speed="400" data-tilt-glare
-        data-tilt-max-glare="0.2">
-        <div class="card-content">
-          <form id="uploadForm" class="upload-form">
-            <label class="file-drop" id="dropZone">
-              <input type="file" id="fileInput" name="file" accept=".txt,.pdf,.png,.jpg,.jpeg,.csv,.xlsx,.xls" />
-              <div class="drop-content">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M12 3v10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-                  <path d="M8 7l4-4 4 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-                  <rect x="3" y="13" width="18" height="7" rx="2" stroke="currentColor" stroke-width="1.2" />
-                </svg>
-                <div>
-                  <div class="drop-title">Drag & drop a file, or click to browse</div>
-                  <div class="drop-sub">Supported: .pdf, .txt, Images, Excel/CSV</div>
-                </div>
-              </div>
-              <div id="scannerBeam" class="scanner-beam"></div>
-            </label>
-            <div class="actions">
-              <button id="analyzeBtn" class="btn primary" type="submit">Analyze</button>
-              <button id="clearBtn" class="btn" type="button">Clear</button>
-            </div>
-          </form>
-
-          <div id="result" class="result" style="display:none">
-            <!-- Result content injected by JS -->
-          </div>
-          <div id="downloadAction" style="display:none; text-align:right; margin-top:12px;">
-            <button id="downloadBtn" class="btn secondary">
-              <svg style="vertical-align:middle;margin-right:6px" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2">
-                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
-                <polyline points="7 10 12 15 17 10" />
-                <line x1="12" y1="15" x2="12" y2="3" />
-              </svg>
-              Download Report
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <div class="recent-scans-container" id="historyContainer" style="display:none">
-        <div class="section-title">Recent Scans</div>
-        <div class="recent-scans" id="recentScans"></div>
-      </div>
-    </div>
+  <!-- Animated Background -->
+  <div class="bubbles">
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
   </div>
+
+  <!-- Navigation -->
+  <nav class="glass-nav">
+    <div class="nav-logo">SP</div>
+    <div class="nav-links">
+      <button class="nav-btn active" data-target="home-page">Detector</button>
+      <button class="nav-btn" data-target="activity-page">Activity Hub</button>
+    </div>
+  </nav>
+
+  <main class="app-container">
+    <!-- PAGE 1: DETECTOR (HOME) -->
+    <section id="home-page" class="page-section active">
+      <div class="hero">
+        <div class="hero-inner">
+          <div class="brand">
+            <div class="logo-container">SP</div>
+            <div class="title-area">
+              <h1>Scholarly Paper Detector</h1>
+              <p class="tag">Advanced AI & Plagiarism Analysis</p>
+            </div>
+          </div>
+
+          <div class="uploader-card" id="tiltCard" data-tilt data-tilt-max="5" data-tilt-speed="400" data-tilt-glare
+            data-tilt-max-glare="0.2">
+            <div class="card-content">
+              <form id="uploadForm" class="upload-form">
+                <label class="file-drop" id="dropZone">
+                  <input type="file" id="fileInput" name="file" accept=".txt,.pdf,.png,.jpg,.jpeg,.csv,.xlsx,.xls" />
+                  <div class="drop-content">
+                    <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12 3v10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M8 7l4-4 4 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <rect x="3" y="13" width="18" height="7" rx="2" stroke="currentColor" stroke-width="1.2" />
+                    </svg>
+                    <div>
+                      <div class="drop-title">Drag & drop to analyze</div>
+                      <div class="drop-sub">PDF, TXT, Images, Excel</div>
+                    </div>
+                  </div>
+                  <div id="scannerBeam" class="scanner-beam"></div>
+                </label>
+                <div class="actions">
+                  <button id="analyzeBtn" class="btn primary" type="submit">Analyze Document</button>
+                  <button id="clearBtn" class="btn" type="button">Clear</button>
+                </div>
+              </form>
+
+              <div id="result" class="result" style="display:none"></div>
+
+              <div id="downloadAction" style="display:none; text-align:right; margin-top:12px;">
+                <button id="downloadBtn" class="btn secondary">
+                  <svg style="vertical-align:middle;margin-right:6px" width="16" height="16" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                    <polyline points="7 10 12 15 17 10" />
+                    <line x1="12" y1="15" x2="12" y2="3" />
+                  </svg>
+                  Download Report
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PAGE 2: ACTIVITY HUB -->
+    <section id="activity-page" class="page-section" style="display:none">
+      <div class="activity-container">
+        <h2>Activity Dashboard</h2>
+        <div class="stats-row">
+          <div class="stat-card">
+            <div class="stat-val" id="totalScans">0</div>
+            <div class="stat-label">Total Scans</div>
+          </div>
+          <div class="stat-card">
+            <div class="stat-val" id="avgAiScore">0%</div>
+            <div class="stat-label">Avg AI Score</div>
+          </div>
+        </div>
+
+        <div class="chart-container glass-panel">
+          <canvas id="activityChart"></canvas>
+        </div>
+
+        <div class="history-list-full" id="fullHistory">
+          <!-- Populated by JS -->
+        </div>
+      </div>
+    </section>
+  </main>
+
   <div class="toast-container" id="toastContainer"></div>
   <footer class="footer">Built for academic integrity — prototype only.</footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="/static/app.js"></script>
 </body>
 
