feat: introduce initial HTML structure for the Scholarly Paper Detector web interface, including detector and activity hub pages.

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,13 @@
     <div class="bubble"></div>
     <div class="bubble"></div>
     <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
   </div>
 
   <!-- Navigation -->
