Fix UI error: Added missing history container elements to index.html

--- a/web/index.html
+++ b/web/index.html
@@ -96,6 +96,12 @@
               </div>
             </div>
           </div>
+
+          <!-- History / Recent Scans -->
+          <div id="historyContainer" class="recent-scans-container" style="display:none;">
+            <div class="section-title">Recent Scans</div>
+            <div id="recentScans" class="recent-scans"></div>
+          </div>
         </div>
       </div>
     </section>
